--- a/index.html
+++ b/index.html
@@ -188,29 +188,55 @@
         </section>
 
 <!-- Sponsors Section -->
-<section id="sponsors" class="py-16 bg-black relative">
-  <!-- Ribbon Heading -->
-  <div class="sponsor-ribbon text-center mb-12 relative">
-    <h2 class="inline-block text-4xl md:text-5xl font-extrabold text-white relative overflow-hidden">
-      <span class="text-pink-400">Our Sponsors & Partners</span>
-      <span class="ribbon-underline absolute left-0 bottom-0 h-1 bg-pink-400 w-0"></span>
-    </h2>
-    <p class="mt-4 text-gray-400 text-lg">
-      Grateful to the amazing partners who power our journey ✨
-    </p>
+<div class="sponsor-columns-container">
+  <!-- Left Column -->
+  <div class="sponsor-column left-column">
+    <div class="sponsor-column-inner">
+      <div class="sponsor-logo"><img src="images/codegeeks.png" alt="Sponsor 1"></div>
+      <div class="sponsor-logo"><img src="images/drishtiias.png" alt="Sponsor 2"></div>
+      <div class="sponsor-logo"><img src="images/ECell NSUT.png" alt="Sponsor 3"></div>
+      <div class="sponsor-logo"><img src="images/kmc.png" alt="Sponsor 4"></div>
+      <!-- duplicate for seamless scroll -->
+      <div class="sponsor-logo"><img src="images/codegeeks.png" alt="Sponsor 1"></div>
+      <div class="sponsor-logo"><img src="images/drishtiias.png" alt="Sponsor 2"></div>
+      <div class="sponsor-logo"><img src="images/ECell NSUT.png" alt="Sponsor 3"></div>
+      <div class="sponsor-logo"><img src="images/kmc.png" alt="Sponsor 4"></div>
+    </div>
   </div>
 
-    <!-- Logos container -->
-  <div class="sponsor-logos-container flex flex-wrap justify-center gap-12">
-    <img src="images/unstop.png" alt="Sponsor 1" class="h-24 object-contain floating">
-    <img src="/images/codegeeks.png" alt="Sponsor 2" class="h-24 object-contain floating-delayed">
-    <img src="/images/drishtiias.png" alt="Sponsor 3" class="h-24 object-contain floating-slow">
-    <img src="/images/kmc.png" alt="Sponsor 4" class="h-24 object-contain floating-fast">
-    <img src="/images/ECell NSUT.png" alt="Sponsor 5" class="h-24 object-contain floating-delayed">
-    <img src="/images/sibilize.png" alt="Sponsor 6" class="h-24 object-contain floating">
+  <!-- Middle Column -->
+  <div class="sponsor-column middle-column">
+    <div class="sponsor-column-inner">
+      <div class="sponsor-logo"><img src="images/sibilize.png" alt="Sponsor 5"></div>
+      <div class="sponsor-logo"><img src="images/unstop.png" alt="Sponsor 6"></div>
+      <div class="sponsor-logo"><img src="images/codegeeks.png" alt="Sponsor 7"></div>
+      <div class="sponsor-logo"><img src="images/drishtiias.png" alt="Sponsor 8"></div>
+      <!-- duplicate for seamless scroll -->
+      <div class="sponsor-logo"><img src="images/sibilize.png" alt="Sponsor 5"></div>
+      <div class="sponsor-logo"><img src="images/unstop.png" alt="Sponsor 6"></div>
+      <div class="sponsor-logo"><img src="images/codegeeks.png" alt="Sponsor 7"></div>
+      <div class="sponsor-logo"><img src="images/drishtiias.png" alt="Sponsor 8"></div>
+    </div>
   </div>
+
+  <!-- Right Column -->
+  <div class="sponsor-column right-column">
+    <div class="sponsor-column-inner">
+      <div class="sponsor-logo"><img src="images/ECell NSUT.png" alt="Sponsor 5"></div>
+      <div class="sponsor-logo"><img src="images/kmc.png" alt="Sponsor 6"></div>
+      <div class="sponsor-logo"><img src="images/sibilize.png" alt="Sponsor 7"></div>
+      <div class="sponsor-logo"><img src="images/drishtiias.png" alt="Sponsor 8"></div>
+      <!-- duplicate for seamless scroll -->
+      <div class="sponsor-logo"><img src="images/ECell NSUT.png" alt="Sponsor 5"></div>
+      <div class="sponsor-logo"><img src="images/kmc.png" alt="Sponsor 6"></div>
+      <div class="sponsor-logo"><img src="images/sibilize.png" alt="Sponsor 7"></div>
+      <div class="sponsor-logo"><img src="images/sibilize.png" alt="Sponsor 8"></div>
+    </div>
   </div>
-</section>
+</div>
+
+
+
 
 
         <!-- Events Section -->
