Updated sponsors section styles and layout

--- a/index.html
+++ b/index.html
@@ -188,6 +188,10 @@
         </section>
 
 <!-- Sponsors Section -->
+ <section class="sponsors-section">
+  <h2 class="section-heading">
+  <span class="white-text">Our</span> <span class="pink-text">Sponsors &amp; Partners</span>
+</h2>
 <div class="sponsor-columns-container">
   <!-- Left Column -->
   <div class="sponsor-column left-column">
