--- a/gallery.html
+++ b/gallery.html
@@ -1,136 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gallery - E-Cell IGDTUW</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Fredericka+the+Great&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Fredericka+the+Great&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Rye&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <!-- Navbar -->
-    <div id="navbar-placeholder">
-      <header>
-        <div class="head-nav">
-          <div class="logo">
-            <img id="logo" src="logo.jpeg" />
-            <div id="logo-text">E-Cell</div>
-          </div>
-          <navbar>
-            <span id="navbar-overlay">
-              <div class="container-nav">
-                <a class="navhead about-us" href="index.html">About Us</a>
-                <a class="navhead our-team" href="our-team.html">Our Team</a>
-                <a class="navhead past-events" href="events.html">Our Events</a>
-                <a class="navhead blogs" href="blogs.html">Blogs</a>
-                <a class="navhead gallery" href="gallery.html">Gallery</a>
 
-                <div class="contact-us">
-                  <button
-                    class="button-contact"
-                    onclick="location.href='contact.html'"
-                  >
-                    Contact Us
-                  </button>
-                </div>
-              </div>
-            </span>
-          </navbar>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Gallery - E-Cell IGDTUW</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
+    rel="stylesheet" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Fredericka+the+Great&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
+    rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Fredericka+the+Great&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Rye&display=swap"
+    rel="stylesheet" />
+</head>
+
+<body>
+  <!-- Navbar -->
+  <div id="navbar-placeholder">
+    <!-- Header -->
+    <header role="banner">
+      <nav class="nav" aria-label="Primary">
+        <a class="brand" href="#home">
+          <img src="logo.jpeg" alt="E-Cell IGDTUW logo" />
+          <div>
+            <div class="title" href="index.html">E-Cell IGDTUW</div>
+            <div class="subtitle text-sm">Innovate • Create • Grow</div>
+          </div>
+        </a>
+
+        <div class="links" id="navLinks">
+          <a href="#about" class="nav-text">About</a>
+          <a href="events.html" class="nav-text">Events</a>
+          <a href="our-team.html" class="nav-text">Team</a>
+          <a href="blogs.html" class="nav-text">Blogs</a>
+          <a href="gallery.html" class="nav-text">Gallery</a>
+          <a href="updates.html" class="nav-text">Updates</a>
+          <a class="cta" href="contact.html">Contact Us</a>
         </div>
-      </header>
+
+        <button class="menu-btn" id="menuBtn" aria-label="Open menu" aria-controls="drawer" aria-expanded="false">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+      </nav>
+    </header>
+
+    <!-- Mobile Drawer -->
+    <div class="drawer" id="drawer" aria-hidden="true">
+      <div class="drawer-panel" role="dialog" aria-label="Mobile menu">
+        <button class="close" id="closeDrawer" aria-label="Close menu">Close</button>
+        <a href="#about" class="nav-text dlink">About</a>
+        <a href="events.html" class="nav-text dlink">Events</a>
+        <a href="our-team.html" class="nav-text dlink">Team</a>
+        <a href="blogs.html" class="nav-text dlink">Blogs</a>
+        <a href="gallery.html" class="nav-text dlink">Gallery</a>
+        <a href="updates.html" class="nav-text dlink">Updates</a>
+        <a href="contact.html" class="dlink">Contact Us</a>
+      </div>
     </div>
 
-    <!-- Gallery Section -->
-    <section class="gallery">
-      <h2>Gallery</h2>
-      <div class="gallery-flex">
-        <div class="column left">
-          <div class="item">
-            <img src="https://i.postimg.cc/zG1qBCqs/1.jpg" alt="" />
-          </div>
-          <div class="item">
-            <img src="https://i.postimg.cc/J4qtf7VV/4.jpg" alt="" />
-          </div>
-          <div class="item">
-            <img src="https://i.postimg.cc/W3Q91yq7/9.jpg" alt="" />
-          </div>
-          <div class="item">
-            <img src="https://i.postimg.cc/PJJ2Kjsh/11.jpg" alt="" />
-          </div>
-          <div class="item">
-            <img src="https://i.postimg.cc/prd0HLPx/17.jpg" alt="" />
-          </div>
-          <div class="item">
-            <img src="https://i.postimg.cc/sDhYZh6q/19.jpg" alt="" />
-          </div>
-          <div class="item">
-            <img src="https://i.postimg.cc/TPGnv3V2/IMG-9233.avif" alt="" />
-          </div>
+  </div>
+
+  <!-- Gallery Section -->
+  <section class="gallery">
+    <h2>Gallery</h2>
+    <div class="gallery-flex">
+      <div class="column left">
+        <div class="item">
+          <img src="https://i.postimg.cc/zG1qBCqs/1.jpg" alt="" />
         </div>
-        <div class="column middle">
-          <div class="item">
-            <img src="https://i.postimg.cc/m2CdbMWW/14.jpg" alt="" />
-          </div>
-          <div class="item">
-            <img src="https://i.postimg.cc/Qd00TCWC/10.jpg" alt="" />
-          </div>
-          <div class="item">
-            <img src="https://i.postimg.cc/3w4YRn8x/12.jpg" alt="" />
-          </div>
-          <div class="item">
-            <img src="https://i.postimg.cc/QdvvJ1h7/16.jpg" alt="" />
-          </div>
-          <div class="item">
-            <img src="https://i.postimg.cc/L63xqwxs/Scanned-20250828-1901-08.jpg" alt="" />
-          </div>
-           <div class="item">
-            <img src="https://i.postimg.cc/3wsqjpmr/Scanned-20250828-1901-04.jpg" alt="" />
-          </div>
-          
+        <div class="item">
+          <img src="https://i.postimg.cc/J4qtf7VV/4.jpg" alt="" />
         </div>
-        <div class="column right">
-          <div class="item">
-            <img src="https://i.postimg.cc/4x20FcWK/5.jpg" alt="" />
-          </div>
-          <div class="item">
-            <img src="https://i.postimg.cc/8cPpmWyy/7.jpg" alt="" />
-          </div>
-          <div class="item">
-            <img src="https://i.postimg.cc/Gpwd4vHP/15.jpg" alt="" />
-          </div>
-          <div class="item">
-            <img src="https://i.postimg.cc/GpxFNxpd/3.jpg" alt="" />
-          </div>
-          <div class="item">
-            <img src="https://i.postimg.cc/ydpm0Xz4/18.jpg" alt="" />
-          </div>
-          <div class="item">
-            <img src="https://i.postimg.cc/QxT8ggRw/IMG-20250828-WA0052.jpg" alt="" />
-          </div>
-           <div class="item">
-            <img src="https://i.postimg.cc/9F0h1dsC/IMG-9223.avif" alt="" />
-          </div>
+        <div class="item">
+          <img src="https://i.postimg.cc/W3Q91yq7/9.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img src="https://i.postimg.cc/PJJ2Kjsh/11.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img src="https://i.postimg.cc/prd0HLPx/17.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img src="https://i.postimg.cc/sDhYZh6q/19.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img src="https://i.postimg.cc/TPGnv3V2/IMG-9233.avif" alt="" />
         </div>
       </div>
-    </section>
+      <div class="column middle">
+        <div class="item">
+          <img src="https://i.postimg.cc/m2CdbMWW/14.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img src="https://i.postimg.cc/Qd00TCWC/10.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img src="https://i.postimg.cc/3w4YRn8x/12.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img src="https://i.postimg.cc/QdvvJ1h7/16.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img src="https://i.postimg.cc/L63xqwxs/Scanned-20250828-1901-08.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img src="https://i.postimg.cc/3wsqjpmr/Scanned-20250828-1901-04.jpg" alt="" />
+        </div>
 
-    <footer>
-      <p>&copy; 2025 E-Cell IGDTUW. All rights reserved.</p>
-    </footer>
+      </div>
+      <div class="column right">
+        <div class="item">
+          <img src="https://i.postimg.cc/4x20FcWK/5.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img src="https://i.postimg.cc/8cPpmWyy/7.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img src="https://i.postimg.cc/Gpwd4vHP/15.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img src="https://i.postimg.cc/GpxFNxpd/3.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img src="https://i.postimg.cc/ydpm0Xz4/18.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img src="https://i.postimg.cc/QxT8ggRw/IMG-20250828-WA0052.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img src="https://i.postimg.cc/9F0h1dsC/IMG-9223.avif" alt="" />
+        </div>
+      </div>
+    </div>
+  </section>
 
-    <script src="script.js"></script>
-  </body>
+  <footer>
+    <p>&copy; 2025 E-Cell IGDTUW. All rights reserved.</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+
 </html>
