Updated Homepage, Navbar and Loader

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </a>
 
         <div class="links" id="navLinks">
-          <a href="index.html" class="nav-text">About</a>
+          <a href="index.html" id="block" class="nav-text">About</a>
           <a href="events.html" class="nav-text">Events</a>
           <a href="our-team.html" class="nav-text">Team</a>
           <a href="blogs.html" class="nav-text">Blogs</a>
