--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </a>
 
         <div class="links" id="navLinks">
-          <a href="index.html" id="block" class="nav-text">About</a>
+          <a href="index.html" class="nav-text">About</a>
           <a href="events.html" class="nav-text">Events</a>
           <a href="our-team.html" class="nav-text">Team</a>
           <a href="blogs.html" class="nav-text">Blogs</a>
@@ -95,9 +95,10 @@
       <section class="hero relative">
         <!-- Background Video -->
         <video autoplay muted loop playsinline class="absolute inset-0 w-full h-full object-cover z-0">
-          <source src="https://www.w3schools.com/howto/rain.mp4" type="video/mp4">
+          <source src="video.mp4" type="video/mp4">
         </video>
-
+        <!-- Gradient Background -->
+        <div id="gradient-bg" class="absolute inset-0 z-0 transition-all duration-200"></div>
         <!-- Gradient Overlay -->
         <div class="absolute inset-0 bg-gradient-to-b from-black/60 via-black/50 to-black/70 z-10"></div>
 
@@ -320,190 +321,190 @@
         Grateful to the amazing partners who power our journey ✨
       </p>
     </div>
-<!-- Sponsors Section -->
- <section class="sponsors-section">
-  <h2 class="section-heading">
-  <span class="white-text">Our</span> <span class="pink-text">Sponsors &amp; Partners</span>
-</h2>
-<div class="sponsor-columns-container">
-  <!-- Left Column -->
-  <div class="sponsor-column left-column">
-    <div class="sponsor-column-inner">
-      <div class="sponsor-logo"><img src="images/codegeeks.png" alt="Sponsor 1"></div>
-      <div class="sponsor-logo"><img src="images/drishtiias.png" alt="Sponsor 2"></div>
-      <div class="sponsor-logo"><img src="images/ECell NSUT.png" alt="Sponsor 3"></div>
-      <div class="sponsor-logo"><img src="images/kmc.png" alt="Sponsor 4"></div>
-      <!-- duplicate for seamless scroll -->
-      <div class="sponsor-logo"><img src="images/codegeeks.png" alt="Sponsor 1"></div>
-      <div class="sponsor-logo"><img src="images/drishtiias.png" alt="Sponsor 2"></div>
-      <div class="sponsor-logo"><img src="images/ECell NSUT.png" alt="Sponsor 3"></div>
-      <div class="sponsor-logo"><img src="images/kmc.png" alt="Sponsor 4"></div>
-    </div>
-  </div>
-
-    <!-- Logos container -->
-    <div class="sponsor-logos-container flex flex-wrap justify-center gap-12">
-      <img src="images/unstop.png" alt="Sponsor 1" class="h-24 object-contain floating">
-      <img src="/images/codegeeks.png" alt="Sponsor 2" class="h-24 object-contain floating-delayed">
-      <img src="/images/drishtiias.png" alt="Sponsor 3" class="h-24 object-contain floating-slow">
-      <img src="/images/kmc.png" alt="Sponsor 4" class="h-24 object-contain floating-fast">
-      <img src="/images/ECell NSUT.png" alt="Sponsor 5" class="h-24 object-contain floating-delayed">
-      <img src="/images/sibilize.png" alt="Sponsor 6" class="h-24 object-contain floating">
-    </div>
-    </div>
-  </section>
-  <!-- Middle Column -->
-  <div class="sponsor-column middle-column">
-    <div class="sponsor-column-inner">
-      <div class="sponsor-logo"><img src="images/sibilize.png" alt="Sponsor 5"></div>
-      <div class="sponsor-logo"><img src="images/unstop.png" alt="Sponsor 6"></div>
-      <div class="sponsor-logo"><img src="images/codegeeks.png" alt="Sponsor 7"></div>
-      <div class="sponsor-logo"><img src="images/drishtiias.png" alt="Sponsor 8"></div>
-      <!-- duplicate for seamless scroll -->
-      <div class="sponsor-logo"><img src="images/sibilize.png" alt="Sponsor 5"></div>
-      <div class="sponsor-logo"><img src="images/unstop.png" alt="Sponsor 6"></div>
-      <div class="sponsor-logo"><img src="images/codegeeks.png" alt="Sponsor 7"></div>
-      <div class="sponsor-logo"><img src="images/drishtiias.png" alt="Sponsor 8"></div>
-    </div>
-  </div>
-
-  <!-- Right Column -->
-  <div class="sponsor-column right-column">
-    <div class="sponsor-column-inner">
-      <div class="sponsor-logo"><img src="images/ECell NSUT.png" alt="Sponsor 5"></div>
-      <div class="sponsor-logo"><img src="images/kmc.png" alt="Sponsor 6"></div>
-      <div class="sponsor-logo"><img src="images/sibilize.png" alt="Sponsor 7"></div>
-      <div class="sponsor-logo"><img src="images/drishtiias.png" alt="Sponsor 8"></div>
-      <!-- duplicate for seamless scroll -->
-      <div class="sponsor-logo"><img src="images/ECell NSUT.png" alt="Sponsor 5"></div>
-      <div class="sponsor-logo"><img src="images/kmc.png" alt="Sponsor 6"></div>
-      <div class="sponsor-logo"><img src="images/sibilize.png" alt="Sponsor 7"></div>
-      <div class="sponsor-logo"><img src="images/sibilize.png" alt="Sponsor 8"></div>
-    </div>
-  </div>
-</div>
-
-
-
-
-
-  <!-- Events Section -->
-  <section id="events" class="relative py-20 bg-[#111] text-white overflow-hidden">
-    <div class="max-w-7xl mx-auto px-6 lg:px-12">
-      <!-- Section Heading -->
-      <div class="text-center mb-16">
-        <h2 class="text-4xl md:text-5xl font-bold tracking-wide mb-4">
-          Our <span class="text-purple-400">Events</span>
-        </h2>
-        <p class="text-gray-400 text-lg md:text-xl max-w-2xl mx-auto">
-          From idea-stage hackathons to inspiring guest talks — our events bring together
-          innovators, creators, and entrepreneurs.
-        </p>
-      </div>
-
-      <!-- Events Grid -->
-      <div class="grid md:grid-cols-3 gap-10">
-        <!-- Event Card -->
-        <div
-          class="event-card bg-[#1a1a1a] rounded-2xl shadow-lg overflow-hidden transform transition hover:scale-105 hover:shadow-purple-500/30">
-          <img src="ideastorm.png" alt="Event 1" class="w-full h-48 object-cover">
-          <div class="p-6">
-            <h3 class="text-2xl font-semibold mb-3">Hackathon 2025</h3>
-            <p class="text-gray-400 text-sm mb-4">
-              A 48-hour innovation sprint where brilliant minds came together to solve real-world problems.
-            </p>
-            <a href="#" class="text-purple-400 font-semibold hover:underline">Read More →</a>
+    <!-- Sponsors Section -->
+    <section class="sponsors-section">
+      <h2 class="section-heading">
+        <span class="white-text">Our</span> <span class="pink-text">Sponsors &amp; Partners</span>
+      </h2>
+      <div class="sponsor-columns-container">
+        <!-- Left Column -->
+        <div class="sponsor-column left-column">
+          <div class="sponsor-column-inner">
+            <div class="sponsor-logo"><img src="images/codegeeks.png" alt="Sponsor 1"></div>
+            <div class="sponsor-logo"><img src="images/drishtiias.png" alt="Sponsor 2"></div>
+            <div class="sponsor-logo"><img src="images/ECell NSUT.png" alt="Sponsor 3"></div>
+            <div class="sponsor-logo"><img src="images/kmc.png" alt="Sponsor 4"></div>
+            <!-- duplicate for seamless scroll -->
+            <div class="sponsor-logo"><img src="images/codegeeks.png" alt="Sponsor 1"></div>
+            <div class="sponsor-logo"><img src="images/drishtiias.png" alt="Sponsor 2"></div>
+            <div class="sponsor-logo"><img src="images/ECell NSUT.png" alt="Sponsor 3"></div>
+            <div class="sponsor-logo"><img src="images/kmc.png" alt="Sponsor 4"></div>
           </div>
         </div>
 
-        <!-- Event Card -->
-        <div
-          class="event-card bg-[#1a1a1a] rounded-2xl shadow-lg overflow-hidden transform transition hover:scale-105 hover:shadow-purple-500/30">
-          <img src="case-conq.png" alt="Event 2" class="w-full h-48 object-cover">
-          <div class="p-6">
-            <h3 class="text-2xl font-semibold mb-3">Entrepreneurship Bootcamp</h3>
-            <p class="text-gray-400 text-sm mb-4">
-              A week-long bootcamp packed with workshops, mentoring sessions, and startup pitch practice.
-            </p>
-            <a href="#" class="text-purple-400 font-semibold hover:underline">Read More →</a>
+        <!-- Logos container -->
+        <div class="sponsor-logos-container flex flex-wrap justify-center gap-12">
+          <img src="images/unstop.png" alt="Sponsor 1" class="h-24 object-contain floating">
+          <img src="/images/codegeeks.png" alt="Sponsor 2" class="h-24 object-contain floating-delayed">
+          <img src="/images/drishtiias.png" alt="Sponsor 3" class="h-24 object-contain floating-slow">
+          <img src="/images/kmc.png" alt="Sponsor 4" class="h-24 object-contain floating-fast">
+          <img src="/images/ECell NSUT.png" alt="Sponsor 5" class="h-24 object-contain floating-delayed">
+          <img src="/images/sibilize.png" alt="Sponsor 6" class="h-24 object-contain floating">
+        </div>
+      </div>
+    </section>
+    <!-- Middle Column -->
+    <div class="sponsor-column middle-column">
+      <div class="sponsor-column-inner">
+        <div class="sponsor-logo"><img src="images/sibilize.png" alt="Sponsor 5"></div>
+        <div class="sponsor-logo"><img src="images/unstop.png" alt="Sponsor 6"></div>
+        <div class="sponsor-logo"><img src="images/codegeeks.png" alt="Sponsor 7"></div>
+        <div class="sponsor-logo"><img src="images/drishtiias.png" alt="Sponsor 8"></div>
+        <!-- duplicate for seamless scroll -->
+        <div class="sponsor-logo"><img src="images/sibilize.png" alt="Sponsor 5"></div>
+        <div class="sponsor-logo"><img src="images/unstop.png" alt="Sponsor 6"></div>
+        <div class="sponsor-logo"><img src="images/codegeeks.png" alt="Sponsor 7"></div>
+        <div class="sponsor-logo"><img src="images/drishtiias.png" alt="Sponsor 8"></div>
+      </div>
+    </div>
+
+    <!-- Right Column -->
+    <div class="sponsor-column right-column">
+      <div class="sponsor-column-inner">
+        <div class="sponsor-logo"><img src="images/ECell NSUT.png" alt="Sponsor 5"></div>
+        <div class="sponsor-logo"><img src="images/kmc.png" alt="Sponsor 6"></div>
+        <div class="sponsor-logo"><img src="images/sibilize.png" alt="Sponsor 7"></div>
+        <div class="sponsor-logo"><img src="images/drishtiias.png" alt="Sponsor 8"></div>
+        <!-- duplicate for seamless scroll -->
+        <div class="sponsor-logo"><img src="images/ECell NSUT.png" alt="Sponsor 5"></div>
+        <div class="sponsor-logo"><img src="images/kmc.png" alt="Sponsor 6"></div>
+        <div class="sponsor-logo"><img src="images/sibilize.png" alt="Sponsor 7"></div>
+        <div class="sponsor-logo"><img src="images/sibilize.png" alt="Sponsor 8"></div>
+      </div>
+    </div>
+    </div>
+
+
+
+
+
+    <!-- Events Section -->
+    <section id="events" class="relative py-20 bg-[#111] text-white overflow-hidden">
+      <div class="max-w-7xl mx-auto px-6 lg:px-12">
+        <!-- Section Heading -->
+        <div class="text-center mb-16">
+          <h2 class="text-4xl md:text-5xl font-bold tracking-wide mb-4">
+            Our <span class="text-purple-400">Events</span>
+          </h2>
+          <p class="text-gray-400 text-lg md:text-xl max-w-2xl mx-auto">
+            From idea-stage hackathons to inspiring guest talks — our events bring together
+            innovators, creators, and entrepreneurs.
+          </p>
+        </div>
+
+        <!-- Events Grid -->
+        <div class="grid md:grid-cols-3 gap-10">
+          <!-- Event Card -->
+          <div
+            class="event-card bg-[#1a1a1a] rounded-2xl shadow-lg overflow-hidden transform transition hover:scale-105 hover:shadow-purple-500/30">
+            <img src="ideastorm.png" alt="Event 1" class="w-full h-48 object-cover">
+            <div class="p-6">
+              <h3 class="text-2xl font-semibold mb-3">Hackathon 2025</h3>
+              <p class="text-gray-400 text-sm mb-4">
+                A 48-hour innovation sprint where brilliant minds came together to solve real-world problems.
+              </p>
+              <a href="#" class="text-purple-400 font-semibold hover:underline">Read More →</a>
+            </div>
+          </div>
+
+          <!-- Event Card -->
+          <div
+            class="event-card bg-[#1a1a1a] rounded-2xl shadow-lg overflow-hidden transform transition hover:scale-105 hover:shadow-purple-500/30">
+            <img src="case-conq.png" alt="Event 2" class="w-full h-48 object-cover">
+            <div class="p-6">
+              <h3 class="text-2xl font-semibold mb-3">Entrepreneurship Bootcamp</h3>
+              <p class="text-gray-400 text-sm mb-4">
+                A week-long bootcamp packed with workshops, mentoring sessions, and startup pitch practice.
+              </p>
+              <a href="#" class="text-purple-400 font-semibold hover:underline">Read More →</a>
+            </div>
+          </div>
+
+          <!-- Event Card -->
+          <div
+            class="event-card bg-[#1a1a1a] rounded-2xl shadow-lg overflow-hidden transform transition hover:scale-105 hover:shadow-purple-500/30">
+            <img src="drishti.png" alt="Event 3" class="w-full h-48 object-cover">
+            <div class="p-6">
+              <h3 class="text-2xl font-semibold mb-3">Guest Lecture Series</h3>
+              <p class="text-gray-400 text-sm mb-4">
+                Inspiring sessions from startup founders and industry leaders sharing their journeys and insights.
+              </p>
+              <a href="#" class="text-purple-400 font-semibold hover:underline">Read More →</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Footer Section -->
+    <footer class="bg-[#0a1a12] text-gray-200 py-12 relative">
+      <div class="max-w-7xl mx-auto px-6 md:px-12 grid grid-cols-1 md:grid-cols-4 gap-8">
+
+        <!-- Contact -->
+        <div>
+          <h3 class="text-lg font-semibold mb-4">Location</h3>
+          <p>Indira Gandhi Delhi Technical University For Women, Kashmere Gate, New Delhi, India</p>
+          </br>
+          <p>+91 98765 43210</p>
+          </br>
+          <p><span class="gmail com">ecelligdtuw@gmail.com</span></p>
+        </div>
+
+        <!-- Company -->
+        <div>
+          <h3 class="text-lg font-semibold mb-4">ECell IGDTUW</h3>
+          <ul class="space-y-2">
+            <li><a href="#" class="hover:text-pink-400 transition">About Us</a></li>
+            <li><a href="#" class="hover:text-pink-400 transition">Careers</a></li>
+            <li><a href="#" class="hover:text-pink-400 transition">Blog</a></li>
+            <li><a href="#" class="hover:text-pink-400 transition">Contact</a></li>
+          </ul>
+        </div>
+
+        <!-- Services -->
+        <div>
+          <h3 class="text-lg font-semibold mb-4">Services</h3>
+          <ul class="space-y-2">
+            <li><a href="#" class="hover:text-pink-400 transition">Hackathons</a></li>
+            <li><a href="#" class="hover:text-pink-400 transition">Insightful Sessions</a></li>
+            <li><a href="#" class="hover:text-pink-400 transition">Events</a></li>
+            <li><a href="#" class="hover:text-pink-400 transition">Funding Ideas</a></li>
+          </ul>
+        </div>
+
+        <!-- Social -->
+        <div>
+          <h3 class="text-lg font-semibold mb-4">Follow Us</h3>
+          <div class="flex space-x-4 mb-4">
+            <a href="#" class="hover:text-pink-400"><i class="fab fa-linkedin-in"></i></a>
+            <a href="#" class="hover:text-pink-400"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="hover:text-pink-400"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="hover:text-pink-400"><i class="fab fa-x-twitter"></i></a>
+          </div>
+          <div class="mt-4">
+            <p>Reviewed on <strong>XYZ</strong> ⭐⭐⭐⭐⭐ 5.0 Rating</p>
           </div>
         </div>
 
-        <!-- Event Card -->
-        <div
-          class="event-card bg-[#1a1a1a] rounded-2xl shadow-lg overflow-hidden transform transition hover:scale-105 hover:shadow-purple-500/30">
-          <img src="drishti.png" alt="Event 3" class="w-full h-48 object-cover">
-          <div class="p-6">
-            <h3 class="text-2xl font-semibold mb-3">Guest Lecture Series</h3>
-            <p class="text-gray-400 text-sm mb-4">
-              Inspiring sessions from startup founders and industry leaders sharing their journeys and insights.
-            </p>
-            <a href="#" class="text-purple-400 font-semibold hover:underline">Read More →</a>
-          </div>
-        </div>
       </div>
+
+      <!-- Footer Bottom -->
+      <div class="mt-12 border-t border-gray-700 pt-6 text-center text-sm text-gray-500">
+        © 2025 ECell IGDTUW. All rights reserved.
+      </div>
+    </footer>
     </div>
-  </section>
-  <!-- Footer Section -->
-  <footer class="bg-[#0a1a12] text-gray-200 py-12 relative">
-    <div class="max-w-7xl mx-auto px-6 md:px-12 grid grid-cols-1 md:grid-cols-4 gap-8">
-
-      <!-- Contact -->
-      <div>
-        <h3 class="text-lg font-semibold mb-4">Location</h3>
-        <p>Indira Gandhi Delhi Technical University For Women, Kashmere Gate, New Delhi, India</p>
-        </br>
-        <p>+91 98765 43210</p>
-        </br>
-        <p><span class="gmail com">ecelligdtuw@gmail.com</span></p>
-      </div>
-
-      <!-- Company -->
-      <div>
-        <h3 class="text-lg font-semibold mb-4">ECell IGDTUW</h3>
-        <ul class="space-y-2">
-          <li><a href="#" class="hover:text-pink-400 transition">About Us</a></li>
-          <li><a href="#" class="hover:text-pink-400 transition">Careers</a></li>
-          <li><a href="#" class="hover:text-pink-400 transition">Blog</a></li>
-          <li><a href="#" class="hover:text-pink-400 transition">Contact</a></li>
-        </ul>
-      </div>
-
-      <!-- Services -->
-      <div>
-        <h3 class="text-lg font-semibold mb-4">Services</h3>
-        <ul class="space-y-2">
-          <li><a href="#" class="hover:text-pink-400 transition">Hackathons</a></li>
-          <li><a href="#" class="hover:text-pink-400 transition">Insightful Sessions</a></li>
-          <li><a href="#" class="hover:text-pink-400 transition">Events</a></li>
-          <li><a href="#" class="hover:text-pink-400 transition">Funding Ideas</a></li>
-        </ul>
-      </div>
-
-      <!-- Social -->
-      <div>
-        <h3 class="text-lg font-semibold mb-4">Follow Us</h3>
-        <div class="flex space-x-4 mb-4">
-          <a href="#" class="hover:text-pink-400"><i class="fab fa-linkedin-in"></i></a>
-          <a href="#" class="hover:text-pink-400"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" class="hover:text-pink-400"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="hover:text-pink-400"><i class="fab fa-x-twitter"></i></a>
-        </div>
-        <div class="mt-4">
-          <p>Reviewed on <strong>XYZ</strong> ⭐⭐⭐⭐⭐ 5.0 Rating</p>
-        </div>
-      </div>
-
-    </div>
-
-    <!-- Footer Bottom -->
-    <div class="mt-12 border-t border-gray-700 pt-6 text-center text-sm text-gray-500">
-      © 2025 ECell IGDTUW. All rights reserved.
-    </div>
-  </footer>
-  </div>
-  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-  <script src="index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script src="index.js"></script>
 
 </body>
 
