--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <!-- Hero -->
     <main id="home">
-      <section class="hero relative">
+      <section class="hero">
         <!-- Background Video -->
         <video autoplay muted loop playsinline class="absolute inset-0 w-full h-full object-cover z-0">
           <source src="video.mp4" type="video/mp4">
@@ -137,23 +137,21 @@
       <!-- About -->
       <section id="about">
         <h2 class="section-title">About E-Cell</h2>
-        <p class="muted">E-Cell IGDTUW fosters an entrepreneurial mindset through speaker sessions,
-          hackathons, bootcamps, and startup collaborations. We’re open to all disciplines—if you’re
-          curious and love building, you belong here.</p>
+        <p class="muted">E-Cell IGDTUW is a student-led initiative that nurtures innovation, creativity, and entrepreneurship on campus. We provide a platform for students to explore ideas, gain mentorship, and build impactful solutions that drive positive change.</p>
         <div class="cards" style="margin-top:18px">
           <article class="card">
-            <div class="chip">Our Aim</div>
-            <h3>To empower individuals with knowledge, innovation, and opportunities.</h3>
+            <div class="chip">🎯 Our Aim</div>
+            <h3>To empower individuals with the right knowledge, confidence, and resources 💡, nurturing creativity and innovation so that every idea 🌱 has the chance to grow into something meaningful.</h3>
             <!-- <p>Project-first initiatives that help you prototype, validate, and iterate.</p> -->
           </article>
           <article class="card">
-            <div class="chip">Our Vision</div>
-            <h3>To build a future where technology and creativity drive positive change.</h3>
+            <div class="chip">👀 Our Vision</div>
+            <h3>To build a future shaped by technology 🤖, collaboration 🤝, and creativity 🎨, where young minds transform possibilities into sustainable solutions 🌍 that drive positive change.</h3>
             <!-- <p>Meet founders, engineers, designers, and mentors who’ve been there.</p> -->
           </article>
           <article class="card">
-            <div class="chip">Our Goal</div>
-            <h3>To transform ideas into impactful actions that inspire growth.”</h3>
+            <div class="chip">🚀 Our Goal</div>
+            <h3>To bridge the gap between ideas 💭 and action 🔧 by providing mentorship 🧑‍🏫, opportunities 🌟, and a supportive community 🌐 that inspires students to become leaders and changemakers.</h3>
             <!-- <p>Showcase your work in college-wide demos, fests, and partner events.</p> -->
           </article>
         </div>
@@ -275,13 +273,13 @@
 
       <!-- Stat 2 -->
       <div>
-        <h2 class="text-4xl font-extrabold text-white counter" data-target="20">0</h2>
+        <h2 class="text-4xl font-extrabold text-white counter" data-target="15">0</h2>
         <p class="text-gray-300 mt-2 text-lg">Events Organized</p>
       </div>
 
       <!-- Stat 3 -->
       <div>
-        <h2 class="text-4xl font-extrabold text-white counter" data-target="50">0</h2>
+        <h2 class="text-4xl font-extrabold text-white counter" data-target="200">0</h2>
         <p class="text-gray-300 mt-2 text-lg">Active Members</p>
       </div>
 
