--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </a>
 
         <div class="links" id="navLinks">
-          <a href="index.html" class="nav-text">About</a>
+          <a href="#about" class="nav-text">About</a>
           <a href="events.html" class="nav-text">Events</a>
           <a href="our-team.html" class="nav-text">Team</a>
           <a href="blogs.html" class="nav-text">Blogs</a>
@@ -80,12 +80,12 @@
     <div class="drawer" id="drawer" aria-hidden="true">
       <div class="drawer-panel" role="dialog" aria-label="Mobile menu">
         <button class="close" id="closeDrawer" aria-label="Close menu">Close</button>
-        <a href="#hero" class="nav-text dlink">About</a>
-        <a href="#events" class="nav-text dlink">Events</a>
-        <a href="#team" class="nav-text dlink">Team</a>
-        <a href="#blogs" class="nav-text dlink">Blogs</a>
-        <a href="#gallery" class="nav-text dlink">Gallery</a>
-        <a href="#updates" class="nav-text dlink">Updates</a>
+        <a href="#about" class="nav-text dlink">About</a>
+        <a href="events.html" class="nav-text dlink">Events</a>
+        <a href="our-team.html" class="nav-text dlink">Team</a>
+        <a href="blogs.html" class="nav-text dlink">Blogs</a>
+        <a href="gallery.html" class="nav-text dlink">Gallery</a>
+        <a href="updates.html" class="nav-text dlink">Updates</a>
         <a href="contact.html" class="dlink">Contact Us</a>
       </div>
     </div>
