--- a/blogs.html
+++ b/blogs.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E-Cell - Innovate, Create and Grow</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800;900&display=swap" rel="stylesheet">
     <link
       href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
       rel="stylesheet"
@@ -25,15 +26,15 @@
     <header role="banner">
       <nav class="nav" aria-label="Primary">
         <a class="brand" href="#home">
-          <img src="logo.jpeg" alt="E-Cell IGDTUW logo" />
+          <img src="logo.jpeg" href="index.html" alt="E-Cell IGDTUW logo" />
           <div>
             <div class="title" href="index.html">E-Cell IGDTUW</div>
-            <div class="subtitle text-sm">Innovate • Create • Grow</div>
+            <div class="subtitle" href="index.html">Innovate • Create • Grow</div>
           </div>
         </a>
 
         <div class="links" id="navLinks">
-          <a href="#about" class="nav-text">About</a>
+          <a href="index.html" class="nav-text">About</a>
           <a href="events.html" class="nav-text">Events</a>
           <a href="our-team.html" class="nav-text">Team</a>
           <a href="blogs.html" class="nav-text">Blogs</a>
