--- a/our-team.html
+++ b/our-team.html
@@ -6,6 +6,7 @@
     <!-- <title>Our Team • E-Cell IGDTUW</title> -->
 
   <!-- Google Fonts -->
+   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800;900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Fredericka+the+Great&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Rye&display=swap" rel="stylesheet">
 
@@ -21,7 +22,6 @@
         --ring: rgba(255, 209, 102, 0.25);
       }
 
-  <style>
     :root{
       --bg:#0b0b0b;
       --panel:#111214;
