--- a/gallery.html
+++ b/gallery.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gallery - E-Cell IGDTUW</title>
   <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800;900&display=swap" rel="stylesheet">
   <link
     href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
     rel="stylesheet" />
@@ -18,6 +19,191 @@
     href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Fredericka+the+Great&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Rye&display=swap"
     rel="stylesheet" />
 </head>
+<style>
+  body{
+    font-family: 'Inter', sans-serif;
+  }
+  header {
+    font-family: 'Inter', sans-serif;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      backdrop-filter: saturate(140%) blur(8px);
+      background: linear-gradient(to bottom, rgba(10, 10, 10, .85), rgba(10, 10, 10, .55));
+      border-bottom: 0px solid rgba(255, 255, 255, .08);
+      flex-direction: row;
+    }
+
+    .nav {
+      margin: 0;
+      height: 72px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0 18px;
+      z-index: 1000;
+      padding: 0 18px;
+      width: 100%;
+    }
+
+    .brand {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      text-decoration: none;
+      color: #f5f5f5;
+    }
+
+    .brand img {
+      height: 42px;
+      width: 42px;
+      object-fit: cover;
+      border-radius: 12px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, .35);
+    }
+
+    .brand .title {
+      font-weight: 800;
+      letter-spacing: .4px
+    }
+
+    .brand .subtitle {
+      font-family: "Great Vibes", cursive;
+      font-size: 14px;
+      color: #999;
+      margin-top: -4px;
+    }
+
+    .links {
+      display: flex;
+      gap: 28px;
+      align-items: center;
+      z-index: 1000;
+    }
+
+    .links .nav-text {
+      cursor: pointer;
+      position: relative;
+      text-decoration: none;
+      color: #f5f5f5;
+      font-weight: 600;
+    }
+
+    .links .nav-text::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: -6px;
+      height: 2px;
+      width: 0;
+      background: linear-gradient(90deg, #f3f4f6, #8a2be2);
+      transition: width .25s ease
+    }
+
+    .links .nav-text:hover::after {
+      width: 100%
+    }
+
+    .cta {
+      padding: 10px 16px;
+      border-radius: 999px;
+      border: 1px solid rgba(255, 255, 255, .15);
+      background: linear-gradient(180deg, rgba(255, 255, 255, .08), rgba(255, 255, 255, .04));
+      cursor: pointer;
+      color: #f5f5f5;
+      font-weight: 700
+    }
+
+    .cta:hover {
+      transform: translateY(-1px)
+    }
+
+    /* Mobile */
+    .menu-btn {
+      display: none;
+      cursor: pointer;
+      border: none;
+      background: transparent;
+      padding: 8px
+    }
+
+    .menu-btn span {
+      display: block;
+      height: 2px;
+      width: 26px;
+      background-color: #f5f5f5;
+      margin: 6px 0;
+      border-radius: 2px
+    }
+
+    @media (max-width: 980px) {
+      .links {
+        display: none
+      }
+
+      .menu-btn {
+        display: block
+      }
+    }
+
+    /* ---------- Mobile Drawer ---------- */
+    .drawer {
+      position: fixed;
+      inset: 0;
+      background: rgba(0, 0, 0, .55);
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity .2s ease;
+      z-index: 999
+    }
+
+    .drawer.active {
+      opacity: 1;
+      pointer-events: auto
+    }
+
+    .drawer-panel {
+      position: absolute;
+      right: -320px;
+      top: 0;
+      height: 100%;
+      width: 320px;
+      background: #0f0f0f;
+      border-left: 1px solid rgba(255, 255, 255, .08);
+      padding: 24px;
+      display: flex;
+      flex-direction: column;
+      gap: 18px;
+      transition: right .25s ease
+    }
+
+    .drawer.active .drawer-panel {
+      right: 0
+    }
+
+    .drawer a {
+      color: #f5f5f5;
+      text-decoration: none;
+      font-weight: 700;
+      padding: 10px 8px;
+      border-radius: 10px
+    }
+
+    .drawer a:hover {
+      background: rgba(255, 255, 255, .06)
+    }
+
+    .drawer .close {
+      align-self: flex-end;
+      background: transparent;
+      border: 1px solid rgba(255, 255, 255, .15);
+      color: #f5f5f5;
+      padding: 6px 10px;
+      border-radius: 10px;
+      cursor: pointer
+    }
+
+</style>
 
 <body>
   <!-- Navbar -->
@@ -26,15 +212,15 @@
     <header role="banner">
       <nav class="nav" aria-label="Primary">
         <a class="brand" href="#home">
-          <img src="logo.jpeg" alt="E-Cell IGDTUW logo" />
+          <img src="logo.jpeg" href="index.html" alt="E-Cell IGDTUW logo" />
           <div>
             <div class="title" href="index.html">E-Cell IGDTUW</div>
-            <div class="subtitle text-sm">Innovate • Create • Grow</div>
+            <div class="subtitle" href="index.html">Innovate • Create • Grow</div>
           </div>
         </a>
 
         <div class="links" id="navLinks">
-          <a href="#about" class="nav-text">About</a>
+          <a href="index.html" class="nav-text">About</a>
           <a href="events.html" class="nav-text">Events</a>
           <a href="our-team.html" class="nav-text">Team</a>
           <a href="blogs.html" class="nav-text">Blogs</a>
@@ -64,8 +250,6 @@
         <a href="contact.html" class="dlink">Contact Us</a>
       </div>
     </div>
-
-  </div>
 
   <!-- Gallery Section -->
   <section class="gallery">
