--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
     <header role="banner">
       <nav class="nav" aria-label="Primary">
         <a class="brand" href="#home">
-          <img src="logo.jpeg" alt="E-Cell IGDTUW logo" />
+          <img src="logo.jpeg" href="index.html" alt="E-Cell IGDTUW logo" />
           <div>
-            <div class="title">E-Cell IGDTUW</div>
-            <div class="subtitle">Innovate • Create • Grow</div>
+            <div class="title" href="index.html">E-Cell IGDTUW</div>
+            <div class="subtitle" href="index.html">Innovate • Create • Grow</div>
           </div>
         </a>
 
         <div class="links" id="navLinks">
-          <a href="#about" class="nav-text">About</a>
+          <a href="index.html" class="nav-text">About</a>
           <a href="events.html" class="nav-text">Events</a>
           <a href="our-team.html" class="nav-text">Team</a>
           <a href="blogs.html" class="nav-text">Blogs</a>
